# alice

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  cjpm.toml  package-lock.json  package.json
.husky/: pre-commit
ac/: Cargo.toml
ac/src/: lib.rs  main.rs
ac/src/accumulator/: diagnostic.rs
ac/src/db/: mod.rs
ac/src/ir/: source.rs  span.rs
ac/src/query/: compile.rs  mod.rs  parse_file.rs
alicec/: Cargo.toml
alicec/src/: cli.rs  config.rs  db.rs  error.rs  ir.rs  lib.rs  main.rs  parse.rs
alicec/src/accumulator/: diagnostic.rs
alicec/src/db/: mod.rs  source_map.rs
alicec/src/driver/: cli.rs  mod.rs
alicec/src/ir/: ast.rs  input.rs  mod.rs  source.rs  span.rs  token.rs
alicec/src/parse/: mod.rs  query.rs  token.rs
alicec/src/query/: compile.rs  mod.rs  parse.rs  parse_file.rs  preprocess.rs
compiler/: Cargo.toml
compiler/ac/: Cargo.toml
compiler/ac/src/: alice.rs  cli.rs  error.rs  lib.rs  main.rs
compiler/ac/src/accumulator/: diagnostic.rs
compiler/ac/src/db/: mod.rs
compiler/ac/src/diagnostic/: mod.rs  span.rs
compiler/ac/src/driver/: compile.rs  mod.rs  state.rs
compiler/ac/src/ir/: ast.rs  mod.rs  source.rs  source_code.rs  span.rs  token.rs
compiler/ac/src/query/: compile.rs
compiler/ac/src/query/parse/: mod.rs
compiler/ac/src/query/parse/lexer/: cursor.rs  mod.rs  raw_token.rs
compiler/ac/src/query/parse_file/: parse_file.rs
compiler/ac_ast/: Cargo.toml
compiler/ac_ast/src/: ast.rs  lib.rs  token.rs
compiler/ac_cursor/: Cargo.toml
compiler/ac_cursor/src/: cursor.rs  lib.rs
compiler/ac_db/: Cargo.toml
compiler/ac_db/src/: db.rs  lib.rs  source.rs  span.rs  symbol.rs
compiler/ac_diag/: Cargo.toml
compiler/ac_diag/src/: diag.rs  diagnostic.rs  lib.rs
compiler/ac_diagnostic/: Cargo.toml
compiler/ac_diagnostic/src/: diagnostic.rs
compiler/ac_driver/: Cargo.toml
compiler/ac_driver/src/: cli.rs  lib.rs
compiler/ac_dsa/: Cargo.toml
compiler/ac_error/: Cargo.toml
compiler/ac_error/src/: lib.rs
compiler/ac_error_code/: Cargo.toml
compiler/ac_error_codes/: Cargo.toml
compiler/ac_interface/: Cargo.toml
compiler/ac_interface/src/: compiler.rs  config.rs  db.rs  lib.rs
compiler/ac_ir/src/: lib.rs  source.rs  span.rs  token.rs
compiler/ac_lexer/: Cargo.toml
compiler/ac_lexer/src/: cursor.rs  lexer.rs  lib.rs  tests.rs  token.rs
compiler/ac_parser/: Cargo.toml
compiler/ac_parser/src/: expr.rs  lexer.rs  lib.rs  parser.rs  token_type.rs
compiler/ac_query/src/: compile.rs  parse_file.rs
compiler/ac_span/: Cargo.toml
compiler/ac_span/src/: lib.rs  span.rs
compiler/ac_token/: Cargo.toml
compiler/ac_token/src/: token.rs
compiler/alicec/: Cargo.toml
compiler/alicec/src/: cli.rs  driver.rs  lib.rs  main.rs  parse.rs
compiler/alicec_db/: Cargo.toml
compiler/alicec_db/src/: db.rs  diag.rs  lib.rs  span.rs
compiler/alicec_diag/: Cargo.toml
compiler/alicec_diag/src/: diagnostic.rs  lib.rs
compiler/alicec_driver/: Cargo.toml
compiler/alicec_driver/src/: args.rs  cli.rs  lib.rs
compiler/alicec_error/: Cargo.toml
compiler/alicec_error/src/: fatal.rs  lib.rs
compiler/alicec_error_codes/: Cargo.toml
compiler/alicec_error_codes/src/: lib.rs
compiler/alicec_errors/: Cargo.toml
compiler/alicec_interface/: Cargo.toml
compiler/alicec_interface/src/: compiler.rs  config.rs  lib.rs
compiler/alicec_ir/: Cargo.toml
compiler/alicec_ir/src/: ast.rs  lib.rs  token.rs
compiler/alicec_lexer/: Cargo.toml
compiler/alicec_lexer/src/: cursor.rs  lexer.rs  lib.rs  tests.rs  token.rs
compiler/alicec_parser/: Cargo.toml
compiler/alicec_parser/src/: lexer.rs  lib.rs  parser.rs
compiler/alicec_query/: Cargo.toml
compiler/alicec_session/: Cargo.toml
compiler/alicec_span/: Cargo.toml
compiler/alicec_token/: Cargo.toml
compiler/src/: alice.rs  db.rs  diag.rs  ir.rs  lib.rs  main.rs
docs/: spec.md
docs/spec/: constants.md  introduction.md  lexical_elements.md  notation.md  source_code_representation.md  table_of_contents.md  toc.md
src/: cli.rs  db.rs  lib.rs  main.cj  main.rs
src/accumulator/: diagnostic.rs
src/ecs/: entity.rs  mod.rs
src/ir/: ast.rs  mod.rs  source_program.rs  token.rs
src/query/: compile.rs  parse.rs
tests/: test.ac
wonderland/: Cargo.toml
(+26 files in other folders)
