[workspace]
resolver = "3"
members = ["compiler/*"]

[workspace.dependencies]
ac_db = { path = "compiler/ac_db" }
ac_driver = { path = "compiler/ac_driver" }
ac_interface = { path = "compiler/ac_interface" }
ac_ir = { path = "compiler/ac_ir" }
ac_parser = { path = "compiler/ac_parser" }
ariadne = { version = "0.6" }
clap = { version = "4" }
ctrlc = { version = "3" }
expect-test = { version = "1" }
logos = { version = "0.16" }
memmap2 = { version = "0.9" }
salsa = { version = "0.25" }
thiserror = { version = "2" }
