[workspace]
resolver = "3"
members = ["compiler/*"]

[workspace.dependencies]
ac_db = { path = "compiler/ac_db" }
ac_diag = { path = "compiler/ac_diag" }
ac_error = { path = "compiler/ac_error" }
ac_interface = { path = "compiler/ac_interface" }
ac_ir = { path = "compiler/ac_ir" }
ac_parser = { path = "compiler/ac_parser" }
ac_query = { path = "compiler/ac_query" }
anyhow = { version = "1" }
ariadne = { version = "0.6" }
clap = { version = "4" }
ctrlc = { version = "3" }
dashmap = { version = "6" }
expect-test = { version = "1" }
memchr = { version = "2" }
memmap2 = { version = "0.9" }
salsa = { version = "0.25" }
thiserror = { version = "2" }
unicode-xid = { version = "0.2" }
