[package]
name = "ac"
version = "0.1.0"
edition = "2024"
authors = ["Dmitrii Chizha <me@filaco.dev>"]
license = "MIT or Apache-2.0"
repository = "https://github.com/FilaCo/alice"
keywords = ["programming-language", "compiler", "ecs", "data-oriented"]
categories = ["development-tools::compilers"]
readme = "README.md"

[dependencies]
ac_db.workspace = true
ac_diag.workspace = true
ac_interface.workspace = true
ac_query.workspace = true
clap = { workspace = true, features = ["derive"] }
