[package]
name = "alicec_lexer"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
alicec_db = { workspace = true }
alicec_diag = { workspace = true }
alicec_ir = { workspace = true }
unicode-xid = { workspace = true }
# tidy-alphabetical-end

[dev-dependencies]
expect-test = { version = "1" }
