[package]
name = "alicec_parser"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
alicec_db = { workspace = true }
alicec_diag = { workspace = true }
alicec_ir = { workspace = true }
alicec_lexer = { workspace = true }
salsa = { workspace = true }
# tidy-alphabetical-end
